--- a/html-css-1/style-1.css
+++ b/html-css-1/style-1.css
@@ -2,13 +2,13 @@ body {
     margin: 0;
     background-color: white;
     width: 100%;
-    height: 100vh;
+    /* height: 100vh; */
   }
 
 .header {
     background-color: salmon;
     width: 100%;
-    height: 20%;
+    height: 25%;
     margin: auto;
 }
 
@@ -38,7 +38,7 @@ body {
     padding: 25px;
     box-sizing: border-box ;
     margin: 15px 10px;
-    height: 35%;
+    height: 44%;
 }
 
 .container-2 img {
@@ -54,7 +54,7 @@ body {
     padding: 25px;
     box-sizing: border-box ;
     margin: 15px 10px;
-    height: 40%;
+    height: 53%;
 }
 
 .container-3 img {
